fix spacing issue in projects

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,7 +38,7 @@ body {
 }
 
 .header {
-  padding: 2em;
+  margin-top: 1em;
   display: flex;
   flex-direction: row;
   width: 75%;
@@ -104,17 +104,19 @@ body {
 
 .about-me {
   width: 75%;
-  margin-bottom:10px;
+  margin-bottom: 1em;
 }
 .projects {
   display: flex;
-
   flex-wrap: wrap;
-  width: 100%;
+  width: 75%;
+  gap: 1.5em;
+  margin-bottom: 1em;
+  margin-top: 0.5em;
 }
 
 .project-card {
-  margin: 1em;
+  
   padding: 1em;
   border: 1px solid var(--color-fg);
   flex: 0 1 calc(33.333% - 2em);
@@ -166,7 +168,7 @@ h2 {
 }
 
 .content-header {
-  padding-left: 1em;
+  padding-left: 0.5em;
   width: 75%;
   font-size: 1.5rem;
   margin-bottom: 10px;
